edite get locations by user role and add convert patient from location to another end point